<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">哪有美食</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="avg_score">平均得分</string>
    <string name="has_evaluate">评价了</string>
    <string name="guess_youlike">猜你喜欢</string>
    <string name="newest_evaluate">最新点评</string>
    <string name="search_result">搜索结果</string>
    <string name="related_suggest">相关推荐</string>
    
    <!-- 菜式详情-概评中四个等级的评价用语 -->
    <string name="suggest_by_life">用生命推荐</string>
    <string name="delicious">好吃好吃</string>
    <string name="isok">还行</string>
    <string name="sorry_for_stomach">对不起我的胃</string>
    <string name="people_to_evaluate">人评价</string>
    
    <string name="fail_get_phone">获取号码失败</string>
    
    <!-- 用户主页 -->
    <string name="trend">动态</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="focus_eater">关注的吃货</string>
    <string name="ta_fans">ta的粉丝</string>
    
    <string name="add_focus">+关注</string>
    <string name="has_focus">已关注</string>
    <string name="cancel_focus">取消关注</string>
    
    <!-- 搜索 -->
    <string name="search_hint">食材、菜式、餐馆搜索</string>
    <string name="yuan">元</string>
    
    <!-- 登陆 -->
    <!-- 登陆按钮文字提醒 -->
    <string name="login_btn_tip">出发！</string>
    <string name="userid_not_null">账号不能为空！</string>
    <string name="pwd_not_null">密码不能为空！</string>
    <string name="logining">登陆中...</string>
    <string name="login_success">登陆成功</string>
    <string name="please_login">请先登陆！</string>
    
    
    <!-- 消息中心 -->
    
    <string name="trend_inform">动态通知</string>
    <string name="system_msg">系统消息</string>
    
    <string name="comment">评论</string>
    <string name="comment_success">评论成功</string>
    

</resources>
