<?xml version="1.0" encoding="utf-8"?>
<!-- 用户个人中心主页 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/ct.finded.findfood">
    
      <LinearLayout 
         android:id="@+id/focus_ta"
         android:layout_width="match_parent"
         android:layout_height="47dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         >
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/focus_btn_bg"  
             />
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="关注ta"
             android:textSize="14sp"
             android:layout_marginLeft="5dp"
             />
     </LinearLayout>
     
    <ct.finded.findfood.control.PageScrollView 
        android:id="@+id/page_scrollview"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_listview_bg"
        android:fillViewport="true"
        android:layout_above="@id/focus_ta"> 
		   <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		     <RelativeLayout 
			        android:id="@+id/page_header"
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/top_area_height"
			        android:background="@drawable/user_center_bg"
			        >
			       
			        <LinearLayout 
			            android:id="@+id/user_icon_area"
			            android:layout_width="@dimen/circle_head_big"
			            android:layout_height="@dimen/circle_head_big"
			            android:orientation="vertical"
			            android:background="@drawable/clickable_bg_selector"
			            android:layout_centerInParent="true">
			            <ct.finded.findfood.control.CircleImageView
			                android:id="@+id/user_icon"
			                android:layout_width="@dimen/circle_head_big"
			                android:layout_height="@dimen/circle_head_big"
			                android:scaleType="centerCrop"
			                app:border_width="@dimen/circle_head_border"
			                app:border_color="@color/white"
			                android:src="@drawable/head_icon_rabit"
			                />
			        </LinearLayout>
			        
			       
			        
			      <TextView 
		            android:id="@+id/username"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="都敏俊"
		            android:textSize="18sp"
		            android:textStyle="bold"
		            android:textColor="@color/white"
		            android:layout_below="@id/user_icon_area"
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="3dp"
		            />
		        
		        <TextView 
		            android:id="@+id/user_desc"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="炸鸡和啤酒？炒粉和粿条才是王道！"
		            android:textSize="12sp"
		            android:textColor="@color/white"
		            android:layout_below="@id/username"
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="3dp"
		            />
			    </RelativeLayout>
			    
		    <LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="48dp"
		         android:orientation="horizontal"
		         android:background="@color/white"
		         >
		         <LinearLayout 
		             android:id="@+id/user_trend_btn"
		             android:layout_width="0dp"
		             android:layout_height="match_parent"
		             android:layout_weight="1"
		             android:orientation="vertical"
		             android:background="@drawable/clickable_bg_selector"
		             >
		            <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="0dp"
		                android:layout_weight="1"
		                android:orientation="vertical"
		                android:gravity="center"
		                >
		             <TextView 
		                 android:id="@+id/user_trend_count"
		                 android:layout_width="match_parent"
		                 android:layout_height="wrap_content"
		                 android:gravity="center"
		                 android:text="18"
		                 android:textSize="15sp"
		                 />
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:gravity="center"
		                android:text="@string/trend"
		                android:textSize="12sp"
		                android:textColor="#bbbbbb"
		                />
		            </LinearLayout>
		             <ImageView 
		                 android:id="@+id/trend_selected"
		                 android:layout_width="match_parent"
		                 android:layout_height="wrap_content"
		                 android:background="@drawable/tab_selected_bg"/>
		         </LinearLayout>
		         <ImageView 
		         android:layout_width="wrap_content"
		         android:layout_height="23dp"
		         android:background="@drawable/tab_seg_bg"
		         android:layout_marginTop="8dp"
		         />
		         <LinearLayout 
		             android:id="@+id/user_focus_btn"
		             android:layout_width="0dp"
		             android:layout_height="match_parent"
		             android:layout_weight="1"
		             android:orientation="vertical"
		             android:background="@drawable/clickable_bg_selector"
		             >
		            <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="0dp"
		                android:layout_weight="1"
		                android:orientation="vertical"
		                android:gravity="center"
		                >
		             <TextView 
		                 android:id="@+id/user_focus_count"
		                 android:layout_width="match_parent"
		                 android:layout_height="wrap_content"
		                 android:gravity="center"
		                 android:text="34"
		                 android:textSize="15sp"
		                 />
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:gravity="center"
		                android:text="@string/focus"
		                android:textSize="12sp"
		                android:textColor="#bbbbbb"
		                />
		            </LinearLayout>
		             <ImageView 
		                 android:id="@+id/focus_selected"
		                 android:layout_width="match_parent"
		                 android:layout_height="wrap_content"
		                 android:background="@drawable/tab_selected_bg"
		                 android:visibility="invisible"
		                 />
		         </LinearLayout>
		         <ImageView 
		         android:layout_width="wrap_content"
		         android:layout_height="23dp"
		         android:background="@drawable/tab_seg_bg"
		         android:layout_marginTop="8dp"
		         />
		         <LinearLayout 
		             android:id="@+id/user_fans_btn"
		             android:layout_width="0dp"
		             android:layout_height="match_parent"
		             android:layout_weight="1"
		             android:orientation="vertical"
		             android:background="@drawable/clickable_bg_selector"
		             >
		            <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="0dp"
		                android:layout_weight="1"
		                android:orientation="vertical"
		                android:gravity="center"
		                >
		             <TextView 
		                 android:id="@+id/user_fans_count"
		                 android:layout_width="match_parent"
		                 android:layout_height="wrap_content"
		                 android:gravity="center"
		                 android:text="61"
		                 android:textSize="15sp"
		                 />
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:gravity="center"
		                android:text="@string/fans"
		                android:textSize="12sp"
		                android:textColor="#bbbbbb"
		                />
		            </LinearLayout>
		             <ImageView 
		                 android:id="@+id/fans_selected"
		                 android:layout_width="match_parent"
		                 android:layout_height="wrap_content"
		                 android:background="@drawable/tab_selected_bg"
		                 android:visibility="invisible"
		                 />
		         </LinearLayout>
		     </LinearLayout>
		     
		     <RelativeLayout 
		         android:layout_width="match_parent"
		         android:layout_height="0dp"
		         android:layout_weight="1"
		         android:background="@color/gray_listview_bg"
		         >
		         <RelativeLayout 
		             android:id="@+id/content"
		             android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             >
			         <!-- 动态列表 -->
			         <ListView 
			            android:id="@+id/trend_list"
			            android:layout_width="match_parent"
				        android:layout_height="match_parent"
				        android:cacheColorHint="#00000000"
				        android:background="@color/gray_listview_bg"
				        android:fadingEdge="none"
				        android:fadeScrollbars="true"
				        android:scrollbars="vertical"
				        android:scrollingCache="false"
				        android:visibility="gone"
			             />
			         
			         <!-- 关注 -->
			         <LinearLayout 
			             android:id="@+id/focus_area"
			             android:layout_width="match_parent"
			             android:layout_height="match_parent"
			             android:orientation="vertical"
			             android:visibility="gone"
			             >
			             <TextView 
			                 android:layout_width="wrap_content"
			                 android:layout_height="wrap_content"
			                 android:text="@string/focus_eater"
			                 android:textAppearance="@style/sty_middle_gray_text"
			                 android:layout_marginLeft="16dp"
			                 android:layout_marginTop="12dp"/>
			                  <!-- 关注列表 -->
				         <ListView 
				            android:id="@+id/focus_who"
				            android:layout_width="match_parent"
					        android:layout_height="match_parent"
					        android:cacheColorHint="#00000000"
					        android:background="@color/gray_listview_bg"
					        android:fadingEdge="none"
					        android:fadeScrollbars="true"
					        android:scrollbars="vertical"
					        android:scrollingCache="false"
					        android:visibility="gone"
					        android:divider="@color/transparent"
					        android:dividerHeight="@dimen/card_padding"
					        android:layout_marginTop="@dimen/card_padding"
				             />
			         </LinearLayout>
			         
			         <!-- 粉丝 -->
			         <LinearLayout
			             android:id="@+id/fans_area" 
			             android:layout_width="match_parent"
			             android:layout_height="match_parent"
			             android:orientation="vertical"
			             >
			             <TextView 
			                 android:layout_width="wrap_content"
			                 android:layout_height="wrap_content"
			                 android:text="@string/ta_fans"
			                 android:textAppearance="@style/sty_middle_gray_text"
			                 android:layout_marginLeft="16dp"
			                 android:layout_marginTop="12dp"/>
			                  <!-- 粉丝列表 -->
				         <ListView 
				            android:id="@+id/fans_list"
				            android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:cacheColorHint="#00000000"
					        android:background="@color/gray_listview_bg"
					        android:fadingEdge="none"
					        android:fadeScrollbars="true"
					        android:scrollbars="vertical"
					        android:scrollingCache="false"
					        android:divider="@color/transparent"
					        android:dividerHeight="@dimen/card_padding"
					        android:layout_marginTop="@dimen/card_padding"
				             />
			         </LinearLayout>
		         </RelativeLayout>
		         <include layout="@layout/footer_loading_progress_tip"
			        android:layout_width="fill_parent" android:layout_height="wrap_content"
			        android:layout_below="@id/content"
			        />
		
		     </RelativeLayout>
		    </LinearLayout>
     </ct.finded.findfood.control.PageScrollView>
    
     <!-- 顶部栏 -->
     <include 
         android:id="@+id/top_nav"
         layout="@layout/top_nav_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/top_nav_bar"/> 
   
   </RelativeLayout>
