<?xml version="1.0" encoding="utf-8"?>
<!-- 首页(未登陆) -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/ct.finded.findfood">
    
     <ct.finded.findfood.control.PageScrollView 
        android:id="@+id/page_scrollview"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_listview_bg"
        android:fillViewport="true">  
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
	      <RelativeLayout
	        android:id="@+id/page_header" 
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/top_area_height"
	        android:background="@drawable/default_home_bg"
	        >
	       
	        <LinearLayout 
	            android:id="@+id/user_icon_area"
	            android:layout_width="@dimen/circle_head_big"
	            android:layout_height="@dimen/circle_head_big"
	            android:orientation="vertical"
	            android:layout_centerInParent="true"
	            android:background="@drawable/clickable_bg_selector">
	            <ct.finded.findfood.control.CircleImageView
	                android:id="@+id/user_icon"
	                android:layout_width="@dimen/circle_head_big"
	                android:layout_height="@dimen/circle_head_big"
	                android:scaleType="centerCrop"
	                app:border_width="@dimen/circle_head_border"
	                app:border_color="@color/white"
	                android:src="@drawable/head_icon_bigger"
	                />
	        </LinearLayout>
	        
	       
	        
	        <TextView 
	            android:id="@+id/tv_user_desc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="登陆校园账号，开启与同学的美食之旅吧！"
	            android:textSize="16sp"
	            android:textColor="@color/white"
	            android:layout_below="@id/user_icon_area"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="8dp"
	            />
	        
	    </RelativeLayout>
	    
	    <LinearLayout 
	        android:id="@+id/active_search_bar"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/search_bar_height"
	        android:orientation="horizontal"
	        android:padding="5dp"
	        android:background="@color/white">
	        <ct.finded.findfood.control.Search_AutoCompleteTextView 
	            android:id="@+id/active_search"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:hint="@string/search_hint"
	            android:dropDownVerticalOffset="3dip"
	            android:textSize="12sp"
	            android:drawableStart="@drawable/search_icon"
	            android:imeOptions="actionSearch"
	            android:drawablePadding="15dp"/>
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/hot_menu_suggest_bar_height"
	        android:orientation="horizontal"
	        android:background="@drawable/deep_gray_bg"
	        >
	        <LinearLayout 
	            android:id="@+id/suggest_food1_btn"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:background="@drawable/clickable_bg_selector">
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/orange_circle_l"
	                />
	            <TextView 
	                android:id="@+id/suggest_food1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:textSize="12sp"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:id="@+id/suggest_food2_btn"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:background="@drawable/clickable_bg_selector">
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/orange_circle_l"
	                />
	            <TextView 
	                android:id="@+id/suggest_food2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:textSize="12sp"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:id="@+id/suggest_food3_btn"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:background="@drawable/clickable_bg_selector">
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/orange_circle_l"
	                />
	            <TextView 
	                android:id="@+id/suggest_food3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:textSize="12sp"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:id="@+id/suggest_food4_btn"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:background="@drawable/clickable_bg_selector">
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/orange_circle_l"
	                />
	            <TextView 
	                android:id="@+id/suggest_food4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:textSize="12sp"/>
	        </LinearLayout>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/gray_listview_bg"
	        android:paddingLeft="10dp"
	        android:paddingTop="10dp"
	        android:paddingRight="10dp"
	        android:orientation="vertical">
	        <RelativeLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            >
	            <TextView 
	                android:id="@+id/guess_youlike"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:text="@string/guess_youlike"
	                android:textAppearance="@style/sty_middle_gray_text"/>
	            <ImageView 
	                android:id="@+id/suggest_fst"
	                android:layout_height="4dp"
	                android:layout_width="4dp"
	                android:background="@drawable/gray_circle_s"
	                android:layout_alignParentRight="true"
	                android:layout_marginTop="5dp"/>
	            <ImageView 
	                android:id="@+id/suggest_sec"
	                android:layout_height="4dp"
	                android:layout_width="4dp"
	                android:background="@drawable/orange_circle_l"
	                android:layout_toLeftOf="@id/suggest_fst"
	                android:layout_marginRight="5dp"
	                android:layout_marginTop="5dp"/>
	            <ImageView 
	                android:id="@+id/suggest_thr"
	                android:layout_height="4dp"
	                android:layout_width="4dp"
	                android:background="@drawable/gray_circle_s"
	                android:layout_toLeftOf="@id/suggest_sec"
	                android:layout_marginRight="5dp"
	                android:layout_marginTop="5dp"/>
	            <ct.finded.findfood.control.HorizontalListView 
	                android:id="@+id/guest_youlike_list"
	                android:layout_width="match_parent"
	                android:layout_height="125dp"
	                android:layout_below="@id/guess_youlike"
	                android:layout_marginTop="10dp"
	                android:focusable="true"
	                android:clickable="true"
	                />
	        </RelativeLayout>
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/newest_evaluate"
	            android:textAppearance="@style/sty_middle_gray_text"
	            android:layout_marginTop="15dp"/>
	        
	         <ct.finded.findfood.control.MyListView 
	                android:id="@+id/newest_evaluate_list"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:cacheColorHint="@color/transparent"
	                android:fadingEdge="none"
	                android:fadeScrollbars="true"
	                android:scrollbars="vertical"
	                android:scrollingCache="false"
	                android:layout_marginTop="10dp"
	                android:layout_marginBottom="10dp"
	                android:dividerHeight="10dp"
	                android:divider="@color/transparent"
	                />
	         <include layout="@layout/footer_loading_progress_tip"
			        android:layout_width="fill_parent" android:layout_height="wrap_content"
			        />
	    </LinearLayout>
    </LinearLayout>
    </ct.finded.findfood.control.PageScrollView>
    
        <!-- 顶部栏 -->
    <include 
        android:id="@+id/top_nav"
        layout="@layout/top_nav_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_nav_bar" /> 
              
    <LinearLayout 
            android:id="@+id/static_search_bar"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/search_bar_height"
	        android:orientation="horizontal"
	        android:padding="5dp"
	        android:layout_below="@id/top_nav"
	        android:background="@color/white"
	        android:visibility="invisible"
	        >
	        <ct.finded.findfood.control.Search_AutoCompleteTextView  
	            android:id="@+id/static_search"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:hint="@string/search_hint"
	            android:textSize="12sp"
	            android:drawableStart="@drawable/search_icon"
	            android:drawablePadding="15dp"
	            android:imeOptions="actionSearch"/>
	    </LinearLayout>

</RelativeLayout>
